--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,3 @@
-
-
 {
    "name": "Anti-mosquito",
    "short_name": "Anti-mosquito",
@@ -10,17 +8,44 @@
    "chrome": {
       "navigation": false
    },
-   "icons": {
-      "16": "/img/icons/icon-16x16.png",
-      "32": "/img/icons/icon-32x32.png",
-      "48": "/img/icons/icon-48x48.png",
-      "60": "/img/icons/icon-60x60.png",
-      "128": "/img/icons/icon-128x128.png",
-      "150": "/img/icons/mstile-150x150.png",
-      "192": "/img/icons/icon-192x192.png",
-      "256": "/img/icons/icon-256x256.png",
-      "512": "/img/icons/icon-512x512.png"
-   },
+  "icons": [
+    {
+      "src": "img/icons/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+   "splash_pages": null,
    "theme_color": "#FFFFFF",
    "background_color": "#FFFFFF",
    "display": "standalone",
